modif nav + inscription désincription

--- a/templates/admin/listuser.html.twig
+++ b/templates/admin/listuser.html.twig
@@ -34,8 +34,8 @@
             </tbody>
         </table>
     </section>
+<div class="container-fluid d-flex justify-content-center">
+    <a class="link_button btn btn-outline-secondary " href="{{ path('admin_user_add') }}" role="button">Ajouter un utilisateur</a>
 
-
-
-
+</div>
 {% endblock %}
