--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,8 @@
            and uncomment the following Encore helpers to start using Symfony UX #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/nav.css') }}">
     {% endblock %}
