--- a/templates/admin/adcampus.html.twig
+++ b/templates/admin/adcampus.html.twig
@@ -51,4 +51,8 @@
         </table>
     </section>
 
+    <div class="container-fluid d-flex justify-content-center">
+        <a class="link_button btn btn-outline-secondary " href="{{ path('admin_dash') }}" role="button">Retour</a>
+
+    </div>
 {% endblock %}
