--- a/templates/admin/listuser.html.twig
+++ b/templates/admin/listuser.html.twig
@@ -38,4 +38,8 @@
     <a class="link_button btn btn-outline-secondary " href="{{ path('admin_user_add') }}" role="button">Ajouter un utilisateur</a>
 
 </div>
+    <div class="container-fluid d-flex justify-content-center">
+        <a class="link_button btn btn-outline-secondary " href="{{ path('admin_dash') }}" role="button">Retour</a>
+
+    </div>
 {% endblock %}
