--- a/templates/lieu/list.html.twig
+++ b/templates/lieu/list.html.twig
@@ -38,5 +38,8 @@
 
         <a class="link_button btn btn-outline-secondary" href="{{ path('lieu_create') }}" role="button">Créer un lieu</a>
     </section>
+    <div class="container-fluid d-flex justify-content-center">
+        <a class="link_button btn btn-outline-secondary " href="{{ path('admin_dash') }}" role="button">Retour</a>
 
+    </div>
 {% endblock %}
