--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -33,17 +33,21 @@
                                 </div>
                             </li>#}
 
-                            <li class="nav-item pl-1">
-                                <a class="nav-link" href="{{ path('admin_campus_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion Campus</a>
-                            </li>
+{#                            <li class="nav-item pl-1">#}
+{#                                <a class="nav-link" href="{{ path('admin_campus_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion Campus</a>#}
+{#                            </li>#}
 
                             <li class="nav-item pl-1">
-                                <a class="nav-link" href="{{ path('lieu_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion Lieux</a>
+                                <a class="nav-link" href="{{ path('admin_dash') }}"><i class="fa fa-home fa-fw mr-1"></i>Dashboard administrateur</a>
                             </li>
 
-                            <li class="nav-item pl-1">
-                                <a class="nav-link" href="{{ path('admin_user_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion utilisateurs</a>
-                            </li>
+{#                            <li class="nav-item pl-1">#}
+{#                                <a class="nav-link" href="{{ path('lieu_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion Lieux</a>#}
+{#                            </li>#}
+
+{#                            <li class="nav-item pl-1">#}
+{#                                <a class="nav-link" href="{{ path('admin_user_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion utilisateurs</a>#}
+{#                            </li>#}
 
 {#                            <li class="nav-item pl-1">
                                 <a class="nav-link" href="{{ path('admin_user_add') }}"><i class="fa fa-home fa-fw mr-1"></i>Ajout d'un utilisateur</a>
