--- a/templates/admin/adcampus.html.twig
+++ b/templates/admin/adcampus.html.twig
@@ -20,7 +20,7 @@
             <form action="{{ path('admin_campus_update', {'id': campu.id}) }}" method="post">
 
                 <tr>
-                    <th scope="row"><input type="text" name="name" value="{{ campu.name }}"></th>
+                    <th scope="row">{{ campu.name }}"</th>
 
                     <td>
                         <div class="list-group-item list-group-item-action">
