--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -103,14 +103,14 @@
                             <td>
                                 {% if app.user in sortie.users %}
                                     {% if sortie.dateLimiteInscription >= date() or sortie.firstAirDate >= date() %}
-                                        <a class="list-group-item list-group-item-action"
+                                        <a class="list-group-item-action"
                                            href="{{ path('inscription_user', {'id': sortie.id}) }}"> Se désinscrire </a>
                                     {% endif %}
                                 {% else %}
 
                                     {% if sortie.etat.libelle == 'Ouverte' and sortie.dateLimiteInscription > date() and sortie.users | length < sortie.nbInscriptionMax %}
 
-                                        <a class="list-group-item list-group-item-action"
+                                        <a class="list-group-item-action"
                                            href="{{ path('inscription_user', {'id': sortie.id}) }}"> S'inscrire </a>
                                     {% endif %}
                                 {% endif %}
