--- a/templates/sortie/show.html.twig
+++ b/templates/sortie/show.html.twig
@@ -7,24 +7,100 @@
 
 {% block body %}
 
+    <h1 class="container-fluid d-flex justify-content-center">Affiche la sortie</h1>
 
-    <h2> Afficher une sortie !</h2>
 
-    <div>
-    <a class="link_button" href="{{ path('sortiev2_show', {'id': sortie.id}) }}">Publier la sortie</a>
-        <a class="link_button" onclick="return confirm('Are you sure to delete {{ sortie.name }} ?')" href="{{ path('sortie_delete', {'id': sortie.id}) }}">Annuler</a>
-    </div>
+<br>
 
     <div>
-        <h5> {{ sortie.name }}</h5>
-        <div> {{ sortie.name }} </div>
-        <div> {{ sortie.firstAirDate | date('d/m/y H:i') }} </div>
-        <div> {{ sortie.dateLimiteInscription | date('d/m/y') }} </div>
-        <div> {{ sortie.users | length }} / {{ sortie.nbInscriptionMax }} </div>
 
 
 
-    </div>
+
+    <div class="d-flex flex-row ">
+                <div class="text">
+                    <h6> Nom de la Sortie :</h6>
+                    <div> {{ sortie.name }} </div>
+                    <br>
+                    <h6> Date de Sortie :</h6>
+                    <div> {{ sortie.firstAirDate | date('d/m/y') }} </div>
+                    <br>
+                    <h6> Date limite d'inscription :</h6>
+                    <div> {{ sortie.dateLimiteInscription | date('d/m/y') }} </div>
+                    <br>
+                    <h6> Utilisateurs :</h6>
+                    <div> {{ sortie.users | length }}
+                        <br>
+                        <br>
+                        <h6> Nombre de place :</h6>
+                        <div>  {{ sortie.nbInscriptionMax }} </div>
+                        <br>
+                        <h6> Durée :</h6>
+                        <div> {{ sortie.duree | date('H:i:s') }} </div>
+                        <br>
+                        <h6> Description :</h6>
+                        <td> {{ sortie.etat.libelle }} </td>
+                        <br>
+
+                </div>
+                </div>
+        <br>
+
+        <div class="d-flex flex-row">
+            <div class="text">
+                <h6> Campus  </h6>
+                {{ sortie.campus.name }}
+                <br>
+                <br>
+                <h6> Lieu </h6>
+                <td> {{ sortie.lieu.nom }} </td>
+                <br>
+                <br>
+                <h6> Rue </h6>
+                {{ sortie.lieu.rue }}
+                <br>
+                <br>
+                <h6> Code postal </h6>
+                {{ sortie.lieu.ville.cp }}
+                <br>
+                <br>
+                <h6> Latitude </h6>
+                {{ sortie.lieu.latitude }}
+                <br>
+                <br>
+                <h6> Longitude </h6>
+                {{ sortie.lieu.longitude }}
+                <br>
+            </div>
+        </div>
+        <br>
+
+        </div>
+<br>
+    <br>
+    <br>
+
+
+
+
+
+    <h5> Liste des participants :</h5>
+    <div> {{ sortie.user.username }} </div>
+    <div> {{ sortie.user.lastname }} </div>
+    <br>
+    <br>
+
+
+
+
+    <footer>
+        <div>
+{#            <a class="link_button" href="{{ path('sortiev2_show', {'id': sortie.id}) }}">Publier la sortie</a>#}
+            <a class="link_button" onclick="return confirm('Are you sure to delete {{ sortie.name }} ?')" href="{{ path('sortie_delete', {'id': sortie.id}) }}">Annuler</a>
+        </div>
+    </footer>
+
+
 
 
 {% endblock %}
