--- a/templates/sortie/update.html.twig
+++ b/templates/sortie/update.html.twig
@@ -83,7 +83,8 @@
     {% if sortie.etat.id < 2 %}
     <button type="submit" name="publiee" class="link_button btn btn-outline-secondary">Publier la sortie</button>
     {% endif %}
-    <button type="submit" name="annuler" class="link_button btn btn-outline-danger">Annuler la sortie</button>
+    <input type="hidden" id="motif_annulation" name="motif_annulation" value="">
+    <button type="submit" name="annuler" onclick="document.getElementById('motif_annulation').value = prompt('Motif de l\'annulation : ')" class="link_button btn btn-outline-danger">Annuler la sortie</button>
     <a class="link_button btn btn-outline-danger" href="{{ path('main_home') }}"
        role="button">Annuler</a>
 
