--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -6,8 +6,8 @@
 
 <h1 class="container-fluid d-flex justify-content-center ">Dashboard</h1>
 
-<div class="container-fluid d-flex justify-content-around">
-    <div class="card" style="min-width: 27vw">
+<div class="container-fluid d-flex justify-content-around flex-wrap">
+    <div class="card" style="min-width: 35vw; max-width: 36vw; margin: 1vw">
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
                 <h5 class="card-title">Gestion des campus</h5>
@@ -24,7 +24,7 @@
             </li>
         </ul>
     </div>
-    <div class="card" style="min-width: 27vw">
+    <div class="card" style="min-width: 35vw; max-width: 36vw; margin: 1vw">
     <ul class="list-group list-group-flush">
         <li class="list-group-item">
             <h5 class="card-title">Gestion des lieux</h5>
@@ -40,7 +40,7 @@
         </li>
     </ul>
     </div>
-    <div class="card" style="min-width: 27vw">
+    <div class="card" style="min-width: 35vw; max-width: 36vw; margin: 1vw">
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
                 <h5 class="card-title">Gestion des utilisateurs</h5>
@@ -52,6 +52,22 @@
                 <div class="container-fluid d-flex justify-content-center">
                     <a class="link_button btn btn-success" href="{{ path('admin_user_list') }}"
                        role="button">Gestion utilisateurs</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="card" style="min-width: 35vw; max-width: 36vw; margin: 1vw">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <h5 class="card-title">Gestion des villes</h5>
+            </li>
+            <li class="list-group-item">
+                <p>Ajoute, modifie ou supprime les villes disponnibles sur la plateforme.</p>
+            </li>
+            <li class="list-group-item">
+                <div class="container-fluid d-flex justify-content-center">
+                    <a class="link_button btn btn-success" href="{{ path('admin_ville_list') }}"
+                       role="button">Gestion des villes</a>
                 </div>
             </li>
         </ul>
