--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -102,7 +102,8 @@
                             </td>
                             <td>
 
-                                {% if app.user == sortie.user or 'ROLE_ADMIN' in app.user.roles %}
+{#                                {% if app.user == sortie.user or 'ROLE_ADMIN' in app.user.roles %}#}
+                                {% if app.user == sortie.user%}
                                     {% if sortie.etat.id < 3 %}
                                         <a class="list-group-item-action"
                                            href="{{ path('sortie_update', {'id': sortie.id}) }}"> Modifier </a>
