--- a/templates/admin/listVilles.html.twig
+++ b/templates/admin/listVilles.html.twig
@@ -18,10 +18,10 @@
             <tbody>
             {% for ville in villes %}
                 <tr>
-                    <th scope="row"><a class="list-group-item list-group-item-action" href="">{{ ville.name }}</a></th>
-                    <td><a class="list-group-item list-group-item-action" href="">{{ ville.cp }}</a></td>
+                    <td><a class="list-group-item list-group-item-action" href="{{ path('admin_ville_show', {'id': ville.id}) }}">{{ ville.name }}</a></td>
+                    <td><a class="list-group-item list-group-item-action" href="{{ path('admin_ville_show', {'id': ville.id}) }}">{{ ville.cp }}</a></td>
 {#                    <td><a  href="{{ path('user_update', {'id': user.id}) }}">Modifier</a> - <a class="text-danger" href="{{ path('admin_user_delete', {'id': user.id}) }}">Supprimer</a></td>#}
-                    <td><a  href="">Modifier</a> - <a class="text-danger" href="{{ path('admin_ville_delete', {'id': ville.id}) }}">Supprimer</a></td>
+                    <td><a  href="{{ path('admin_ville_update', {'id': ville.id}) }}">Modifier</a></td>
                 </tr>
 
             {% endfor %}
