--- a/templates/admin/listuser.html.twig
+++ b/templates/admin/listuser.html.twig
@@ -15,6 +15,7 @@
                 <th scope="col">Prénom</th>
                 <th scope="col">Campus</th>
                 <th scope="col">E-Mail</th>
+                <th scope="col">Actif</th>
                 <th scope="col">Action</th>
             </tr>
             </thead>
@@ -26,6 +27,11 @@
                     <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">{{ user.firstname }}</a></td>
                     <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">{{ user.campus.name }}</a></td>
                     <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">{{ user.email }}</a></td>
+                    {% if user.actif %}
+                        <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}"> ✅ </a></td>
+                    {% else %}
+                        <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}"> ❌ </a></td>
+                    {% endif %}
                     <td><a  href="{{ path('user_update', {'id': user.id}) }}">Modifier</a> - <a class="text-danger" href="{{ path('admin_user_delete', {'id': user.id}) }}">Supprimer</a></td>
                 </tr>
 
