--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,4 +1,12 @@
-.navbar { background-color: #484848; }
+
+body{
+    background:  #E6EDF4;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+}
+
+.navbar { background-color: steelblue; }
 .navbar .navbar-nav .nav-link { color: #fff; }
 .navbar .navbar-nav .nav-link:hover { color: #fbc531; }
 .navbar-expand-lg {
@@ -25,6 +33,25 @@
 .text{
     width: 50%;
     text-align: center;
+}
+
+
+img{
+    display: inline;
+    vertical-align: middle;
+    margin-bottom: 10px;
+}
+
+h3{
+    display: inline;
+}
+
+h5{
+    color: olivedrab;
+}
+
+h1{
+    color: olivedrab;
 }
 
 
