--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -154,8 +154,12 @@
 
 
     {% else %}
+        <br>
         <div class="example-wrapper">
-            <h1>Hello Icc c'est la page d'accueil avec plein de filtres !! </h1>
+            <h1>Bienvenue aux sorties de l'ENI 2023 </h1>
+            <br>
+            <br>
+            <br>
             <a class="link_button btn btn-outline-secondary" href="{{ path('app_login') }}" role="button">Connecte
                 toi</a>
         </div>
