--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,10 +10,11 @@
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/nav.css') }}">
-        <h3><a href="ma"><img src="{{ asset('img/eni.png') }}" alt=" "></a> </h3>
-        <h3> Ecole Informatique </h3>
+{#        <h3><a href="ma"><img src="{{ asset('img/eni.png') }}" alt=" "></a> </h3>#}
+
 
 
     {% endblock %}
