--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand navbar-light bs-dark-bg-subtle">
     <div class="container">
+        <h3><a href="ma"><img src="{{ asset('img/eni.png') }}" alt=" "></a> </h3>
         <a class="navbar-brand text-white" href="{{ path('main_home') }}"><i
-                    class="fa fa-graduation-cap fa-lg mr-2"></i>Sortir !</a>
+                    
+                    class="fa fa-graduation-cap fa-lg mr-2"></i>Sortie</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvbCollapse"
                 aria-controls="nvbCollapse">
             <span class="navbar-toggler-icon"></span>
