--- a/templates/sortie/create.html.twig
+++ b/templates/sortie/create.html.twig
@@ -9,7 +9,9 @@
 
 
     <h2 class="container-fluid d-flex justify-content-center"> Creer une sortie !</h2>
-  
+
+    <div class="container" id="map"></div>
+
     <div class="container-fluid d-flex flex-direction-column justify-content-center">
 
     {{ form_start(sortieForm) }}
@@ -61,11 +63,14 @@
     document.getElementById('sorties_rue').disabled = !this.checked;
     "> <br>
 
+
+
+
         {{ form_label(sortieForm.nom_lieu) }}
     {{ form_widget(sortieForm.nom_lieu, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
     {{ form_label(sortieForm.Latitude) }}
-    {{ form_widget(sortieForm.Latitude, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
+    {{ form_widget(sortieForm.Latitude, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control', 'id': 'test'}}) }}
 
     {{ form_label(sortieForm.Longitude) }}
     {{ form_widget(sortieForm.Longitude, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
@@ -78,6 +83,77 @@
 
     <br>
 
+        <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <script>
+        let map = L.map('map',{dragging: true}).setView([47.2, 2.333], 6);
+
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+        }).addTo(map);
+
+        // let marker = new  L.marker([47,2],{
+        //     draggable: true,
+        //     dragging:true,
+        //     autoPan: true ,
+        //     autoPanPadding: [100,100] }).addTo(map);
+
+        const input = document.getElementById('sorties_rue');
+        var newStr = null;
+        input.addEventListener('input', function() {
+            const userInput = input.value;
+
+            console.log('Donnée saisie par l\'utilisateur :', userInput);
+            newStr = userInput.replace(' ', '+');
+        });
+
+        const selectElement = document.querySelector('#sorties_ville_select');
+        let marker = null;
+
+        let lat=null;
+        let lon=null;
+
+        selectElement.addEventListener('change', async function () {
+            const selectedOption = this.options[this.selectedIndex];
+            const selectedContent = selectedOption.innerHTML;
+            console.log('Contenu de l\'option sélectionnée :', selectedContent);
+            const result = newStr + "+" + selectedContent;
+            console.log(await callApi(result))
+            var data = await callApi(result);
+            console.log(data.features[0].geometry.coordinates)
+            console.log(data.features[0].geometry.coordinates[0])
+            document.getElementById('sorties_Latitude').value = data.features[0].geometry.coordinates[0]
+            document.getElementById('sorties_Longitude').value = data.features[0].geometry.coordinates[1]
+
+            lat=data.features[0].geometry.coordinates[0]
+            lon=data.features[0].geometry.coordinates[1]
+
+            if (marker) {
+                marker.remove();
+            }
+
+            marker = new  L.marker([lon,lat],{
+                draggable: false,
+                dragging:false,
+                autoPan: true ,
+                autoPanPadding: [100,100] }).addTo(map);
+            console.log(marker)
+            console.log(map);
+
+            map.setView([data.features[0].geometry.coordinates[1], data.features[0].geometry.coordinates[0]]);
+
+
+            // Autres opérations avec le contenu de l'option sélectionnée...
+        });
+
+        async function callApi(result){
+        let response = await fetch(`https://api-adresse.data.gouv.fr/search/?q=${result}`)
+        if (response.ok){
+            return response.json()
+        }
+        }
+
+
+    </script>
 
     <button type="submit" name="creee" class="link_button btn btn-outline-secondary">Enregistrer</button>
     <button type="submit" name="publiee" class="link_button btn btn-outline-secondary">Publier la sortie</button>
@@ -86,5 +162,10 @@
 
         {{ form_end(sortieForm) }}
     </div>
+
+
+
+
+
 
 {% endblock %}
