zoom auto sur le lieu

--- a/templates/sortie/create.html.twig
+++ b/templates/sortie/create.html.twig
@@ -139,7 +139,7 @@
             console.log(marker)
             console.log(map);
 
-            map.setView([data.features[0].geometry.coordinates[1], data.features[0].geometry.coordinates[0]]);
+            map.setView([data.features[0].geometry.coordinates[1], data.features[0].geometry.coordinates[0]], 13);
 
 
             // Autres opérations avec le contenu de l'option sélectionnée...
