Maj route inscription

--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand navbar-light bs-dark-bg-subtle">
     <div class="container">
-        <h3><a href="ma"><img src="{{ asset('img/eni.png') }}" alt=" "></a> </h3>
+        <h3><a href="{{ path('main_home') }}"><img src="{{ asset('img/eni.png') }}" alt=" "></a> </h3>
         <a class="navbar-brand text-white" href="{{ path('main_home') }}"><i
                     
                     class="fa fa-graduation-cap fa-lg mr-2"></i>Sortie</a>
