--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -18,18 +18,18 @@
         {{ form_start(sortieForm) }}
         <div class="container d-flex">
             {{ form_label(sortieForm.campus) }}
-            {{ form_widget(sortieForm.campus) }}
+            {{ form_widget(sortieForm.campus,{'attr': {'class': 'form-control'}}) }}
 
             {{ form_label(sortieForm.name) }}
-            {{ form_widget(sortieForm.name) }}
+            {{ form_widget(sortieForm.name,{'attr': {'class': 'form-control'}}) }}
         </div>
         <div class="container d-flex">
 
             {{ form_label(sortieForm.dateUn) }}
-            {{ form_widget(sortieForm.dateUn) }}
+            {{ form_widget(sortieForm.dateUn,{'attr': {'class': 'form-control'}}) }}
 
             {{ form_label(sortieForm.dateDeux) }}
-            {{ form_widget(sortieForm.dateDeux) }}
+            {{ form_widget(sortieForm.dateDeux,{'attr': {'class': 'form-control'}}) }}
         </div>
 
         <div class="container d-flex flex-column">
