--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -59,9 +59,7 @@
 
         {{ form_end(sortieForm) }}
 
-
-
-
+        <div class="container" id="map" data-sorties="{{ sorties|json_encode|e('html_attr') }}"></div>
 
         <div class="affichage sortie">
             <section class="container list">
@@ -166,5 +164,89 @@
 
 
     {% endif %}
+
+
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <script>
+        let map = L.map('map',{dragging: true}).setView([47.2, 2.333], 6);
+
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+        }).addTo(map);
+
+        // let marker = new  L.marker([47,2],{
+        //     draggable: true,
+        //     dragging:true,
+        //     autoPan: true ,
+        //     autoPanPadding: [100,100] }).addTo(map);
+
+        const mapElement = document.getElementById('map');
+        const sortiesData = JSON.parse(mapElement.dataset.sorties);
+        console.log(sortiesData);
+
+        if (sortiesData.length > 0) {
+            const premiereSortie = sortiesData[0];
+            const nomPremiereSortie = premiereSortie.name;
+            console.log(premiereSortie);
+        } else {
+            console.log("Aucune sortie disponible.");
+        }
+
+        var newStr = null;
+        input.addEventListener('input', function() {
+            const userInput = input.value;
+
+            console.log('Donnée saisie par l\'utilisateur :', userInput);
+            newStr = userInput.replace(' ', '+');
+        });
+
+        const selectElement = document.querySelector('#sorties_ville_select');
+        let marker = null;
+
+        let lat=null;
+        let lon=null;
+
+        selectElement.addEventListener('change', async function () {
+            const selectedOption = this.options[this.selectedIndex];
+            const selectedContent = selectedOption.innerHTML;
+            console.log('Contenu de l\'option sélectionnée :', selectedContent);
+            const result = newStr + "+" + selectedContent;
+            console.log(await callApi(result))
+            var data = await callApi(result);
+            console.log(data.features[0].geometry.coordinates)
+            console.log(data.features[0].geometry.coordinates[0])
+            document.getElementById('sorties_Latitude').value = data.features[0].geometry.coordinates[0]
+            document.getElementById('sorties_Longitude').value = data.features[0].geometry.coordinates[1]
+
+            lat=data.features[0].geometry.coordinates[0]
+            lon=data.features[0].geometry.coordinates[1]
+
+            if (marker) {
+                marker.remove();
+            }
+
+            marker = new  L.marker([lon,lat],{
+                draggable: false,
+                dragging:false,
+                autoPan: true ,
+                autoPanPadding: [100,100] }).addTo(map);
+            console.log(marker)
+            console.log(map);
+
+            map.setView([data.features[0].geometry.coordinates[1], data.features[0].geometry.coordinates[0]], 13);
+
+
+            // Autres opérations avec le contenu de l'option sélectionnée...
+        });
+
+        async function callApi(result){
+            let response = await fetch(`https://api-adresse.data.gouv.fr/search/?q=${result}`)
+            if (response.ok){
+                return response.json()
+            }
+        }
+
+
+    </script>
 
 {% endblock %}
