--- a/templates/sortie/create.html.twig
+++ b/templates/sortie/create.html.twig
@@ -99,8 +99,9 @@
 
         const input = document.getElementById('sorties_rue');
         var newStr = null;
+        var userInput=null
         input.addEventListener('input', function() {
-            const userInput = input.value;
+            userInput = input.value;
 
             console.log('Donnée saisie par l\'utilisateur :', userInput);
             newStr = userInput.replace(' ', '+');
@@ -141,7 +142,7 @@
 
             map.setView([data.features[0].geometry.coordinates[1], data.features[0].geometry.coordinates[0]], 13);
 
-
+            marker.bindPopup(`<strong>${userInput}</strong><br>${selectedContent}`);
             // Autres opérations avec le contenu de l'option sélectionnée...
         });
 
