--- a/templates/sortie/create.html.twig
+++ b/templates/sortie/create.html.twig
@@ -85,6 +85,7 @@
 
         <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
     <script>
+
         let map = L.map('map',{dragging: true}).setView([47.2, 2.333], 6);
 
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -97,59 +98,60 @@
         //     autoPan: true ,
         //     autoPanPadding: [100,100] }).addTo(map);
 
-        const input = document.getElementById('sorties_rue');
-        var newStr = null;
-        input.addEventListener('input', function() {
-            const userInput = input.value;
+        // if (document.getElementById('checkboxChoix').checked){
 
-            console.log('Donnée saisie par l\'utilisateur :', userInput);
-            newStr = userInput.replace(' ', '+');
-        });
+            const input = document.getElementById('sorties_rue');
+            var newStr = null;
+            input.addEventListener('input', function() {
+                const userInput = input.value;
 
-        const selectElement = document.querySelector('#sorties_ville_select');
-        let marker = null;
+                console.log('Donnée saisie par l\'utilisateur :', userInput);
+                newStr = userInput.replace(' ', '+');
+            });
 
-        let lat=null;
-        let lon=null;
+            const selectElement = document.querySelector('#sorties_ville_select');
+            let marker = null;
 
-        selectElement.addEventListener('change', async function () {
-            const selectedOption = this.options[this.selectedIndex];
-            const selectedContent = selectedOption.innerHTML;
-            console.log('Contenu de l\'option sélectionnée :', selectedContent);
-            const result = newStr + "+" + selectedContent;
-            console.log(await callApi(result))
-            var data = await callApi(result);
-            console.log(data.features[0].geometry.coordinates)
-            console.log(data.features[0].geometry.coordinates[0])
-            document.getElementById('sorties_Latitude').value = data.features[0].geometry.coordinates[0]
-            document.getElementById('sorties_Longitude').value = data.features[0].geometry.coordinates[1]
+            let lat=null;
+            let lon=null;
 
-            lat=data.features[0].geometry.coordinates[0]
-            lon=data.features[0].geometry.coordinates[1]
+            selectElement.addEventListener('change', async function () {
+                const selectedOption = this.options[this.selectedIndex];
+                const selectedContent = selectedOption.innerHTML;
+                console.log('Contenu de l\'option sélectionnée :', selectedContent);
+                const result = newStr + "+" + selectedContent;
+                console.log(await callApi(result))
+                var data = await callApi(result);
+                console.log(data.features[0].geometry.coordinates)
+                console.log(data.features[0].geometry.coordinates[0])
+                document.getElementById('sorties_Latitude').value = data.features[0].geometry.coordinates[0]
+                document.getElementById('sorties_Longitude').value = data.features[0].geometry.coordinates[1]
 
-            if (marker) {
-                marker.remove();
+                lat = data.features[0].geometry.coordinates[0]
+                lon = data.features[0].geometry.coordinates[1]
+
+                if (marker) {
+                    marker.remove();
+                }
+
+                marker = new L.marker([lon, lat], {
+                    draggable: false,
+                    dragging: false,
+                    autoPan: true,
+                    autoPanPadding: [100, 100]
+                }).addTo(map);
+                console.log(marker)
+                console.log(map);
+
+                map.setView([data.features[0].geometry.coordinates[1], data.features[0].geometry.coordinates[0]], 13);
+
+            });
+
+        async function callApi(result) {
+            let response = await fetch(`https://api-adresse.data.gouv.fr/search/?q=${result}`)
+            if (response.ok) {
+                return response.json()
             }
-
-            marker = new  L.marker([lon,lat],{
-                draggable: false,
-                dragging:false,
-                autoPan: true ,
-                autoPanPadding: [100,100] }).addTo(map);
-            console.log(marker)
-            console.log(map);
-
-            map.setView([data.features[0].geometry.coordinates[1], data.features[0].geometry.coordinates[0]], 13);
-
-
-            // Autres opérations avec le contenu de l'option sélectionnée...
-        });
-
-        async function callApi(result){
-        let response = await fetch(`https://api-adresse.data.gouv.fr/search/?q=${result}`)
-        if (response.ok){
-            return response.json()
-        }
         }
 
 
